discussion/kv_engine/181529/181529_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

Don't parse audit_events.json at runtime

We don't support modifying this file at the customer site
so we can simplify the logic by generate code at build
time

This is an initial refactor for a followup refactor where
we'll add support for a more fine grained audit configuration.

Change-Id: Ib2b78b6e8f6e42463fa3e0f2193cc1e797137321

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-20 20:26:07.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-20 20:47:45.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50577/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50577/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23383/ : ABORTED

Failure of GoogleTest "TracingTest.NoDataUnlessRequested":

<pre>
[ RUN      ] TracingTest.NoDataUnlessRequested
[2022-10-20T20:47:27.288Z] unknown file: Failure
[2022-10-20T20:47:27.288Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-10-20T20:47:27.288Z] [  FAILED  ] TracingTest.NoDataUnlessRequested (375 ms)
TracingTest.NoDataUnlessRequested
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23383/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23383/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24621/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24621/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23786/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23786/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31806/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31806/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22805/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22805/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21354/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.cc:15:25: warning: use "= default" to define a trivial default constructor [modernize-use-equals-default]
AuditDescriptorManager::AuditDescriptorManager()
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.cc:34:30: error: out-of-line definition of "iterate" does not match any declaration in "AuditDescriptorManager" [clang-diagnostic-error]
void AuditDescriptorManager::iterate(
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.h:42:23: error: no template named "function" in namespace "std" [clang-diagnostic-error]
    void iterate(std::function<void(EventDescriptor&)> callback);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.cc:105:24: error: use of undeclared identifier "AuditDescriptorManager" [clang-diagnostic-error]
    auto* descriptor = AuditDescriptorManager::instance().lookup(id);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/eventdescriptor.h:72:10: error: no type named "atomic_bool" in namespace "std" [clang-diagnostic-error]
    std::atomic_bool enabled;
         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/hashtable.h:218:24: error: type "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >::__value_alloc_traits" (aka "int") cannot be used prior to "::" because it has no members [clang-diagnostic-error]
      typedef typename __value_alloc_traits::pointer            pointer;
                       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unordered_map.h:105:18: note: in instantiation of template class "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >" requested here
      _Hashtable _M_h;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.h:46:51: note: in instantiation of template class "std::unordered_map<unsigned int, EventDescriptor, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<const unsigned int, EventDescriptor> > >" requested here
    std::unordered_map<uint32_t, EventDescriptor> descriptors;
                                                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/hashtable.h:219:24: error: type "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >::__value_alloc_traits" (aka "int") cannot be used prior to "::" because it has no members [clang-diagnostic-error]
      typedef typename __value_alloc_traits::const_pointer      const_pointer;
                       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unordered_map.h:113:36: error: no type named "mapped_type" in "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >" [clang-diagnostic-error]
      typedef typename _Hashtable::mapped_type  mapped_type;
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.h:46:51: note: in instantiation of template class "std::unordered_map<unsigned int, EventDescriptor, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<const unsigned int, EventDescriptor> > >" requested here
    std::unordered_map<uint32_t, EventDescriptor> descriptors;
                                                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unordered_map.h:114:36: error: no type named "hasher" in "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >" [clang-diagnostic-error]
      typedef typename _Hashtable::hasher       hasher;
                                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21354/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.cc:34:30:
error: out-of-line definition of "iterate" does not match any declaration in "AuditDescriptorManager" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21354/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20613/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11182/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11087/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
